arreglando contenedor de index habitos el responsive lo solucione poniendo fixed

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -25,6 +25,7 @@
   .container_index_link {
     @include flex-center(row, 40px);
     text-align: center;
+    position: fixed;
   
     .titles {
       font-size: 1.8rem;
